# microserde

./: Cargo.toml
src/: ignore.rs  lib.rs
src/de/: impls.rs  mod.rs
src/json/: array.rs  de.rs  drop.rs  mod.rs  object.rs  ser.rs  value.rs
src/ser/: impls.rs  mod.rs
