[package]
name = "microserde"
version = "0.1.13"
authors = ["David Tolnay <dtolnay@gmail.com>", "Alexis Sellier <self@cloudhead.io>"]
license = "MIT OR Apache-2.0"
description = "Zero-dependency implementation of Serde"
repository = "https://github.com/cloudhead/microserde"
documentation = "https://docs.rs/microserde"
readme = "README.md"
edition = "2018"

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_tstd = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", features = ["backtrace"] }

[dependencies]
microserde-derive = { version = "=0.1.13", path = "derive" }

[dev-dependencies]
automod = "1.0"

[workspace]
members = ["derive"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
